--- a/ton-connect.manifest.json
+++ b/ton-connect.manifest.json
@@ -1,6 +1,6 @@
 {
-    "url": "syntlabs.com",
-    "name": "Synthesis: Cyanide VPN",
+    "url": "https://syntlabs.com",
+    "name": "Cyanide VPN",
     "iconUrl": "https://github.com/syntlabs/press-kit/blob/main/Logos/synt.svg",
     "termsOfUseUrl": "syntlabs.com/terms",
     "privacyPolicyUrl": "syntlabs.com/privacy"
